preference/java/quarkus/src/main/deployments/ocp.jvm/02.service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: preference-svc
  name: v-svc
spec:
  ports:
  - port: 8080
    #nodePort: 30202
    protocol: TCP
    targetPort: 8080
  selector:
    app: preference
    version: v1
  type: ClusterIP
status:
  loadBalancer: {}
