preference/java/quarkus/src/main/deployments/ocp.jvm/04.VirtualService.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: customer-vs
spec:
  hosts:
  - "*"
  gateways:                 # Binds the Virtual Services to the Gateway
  - istio-demo-gateway      # Ensure you mention the gateway that was provisioned
  http:                     # Traffic Type
  - match:                  # Rules for Matching Traffic. More than one Rule Can Be provided
    - uri:
        prefix: /customer
    rewrite:
      uri: /customer
    route:
    - destination:
        host: customer-svc
        port:
          number: 8080
